<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="10"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/txv_sr_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_srno"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_restaurant_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_rest_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_email" />

        <TextView
            android:id="@+id/txv_po"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_po"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_co"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_co" />

        <TextView
            android:id="@+id/txv_rpo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_rpo" />

        <TextView
            android:id="@+id/txv_fo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_fo"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_nswt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_nswt" />

        <TextView
            android:id="@+id/txv_nsat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_nsat"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_cba"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_cba" />

        <TextView
            android:id="@+id/txv_cbu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_cbu" />

        <TextView
            android:id="@+id/txv_tb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_tb"
            android:textColor="#000000" />
        
        <TextView
            android:id="@+id/txv_nop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_nop"
            android:textColor="#000000" />
        
        <TextView
            android:id="@+id/txv_booking_charge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_bc"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_ulp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_ulp" />

        <TextView
            android:id="@+id/txv_total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_total" />


        <TextView
            android:id="@+id/txv_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_status" />
    </LinearLayout>

</LinearLayout>