<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="10"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >

        <TextView
            android:id="@+id/txv_sr_no_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_srno"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_restaurant_name_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_rest_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_email_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_email" />

        <TextView
            android:id="@+id/txv_po_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_po"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_co_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_co" />

        <TextView
            android:id="@+id/txv_cba_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_cba" />

        <TextView
            android:id="@+id/txv_cbu_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_cbu"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_tb_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_tb" />
        
        <TextView
            android:id="@+id/txv_booking_charge_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/oo_invoice_modulo"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_total_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_grand_total" />
        
        <TextView
            android:id="@+id/txv_total_pa"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_payable_amount" />
        
<!--         <TextView -->
<!--             android:id="@+id/txv_booking_charge" -->
<!--             android:layout_width="0dp" -->
<!--             android:layout_height="match_parent" -->
<!--             android:layout_weight="1" -->
<!--             android:background="@drawable/roundcorner_all_booking" -->
<!--             android:gravity="center" -->
<!--             android:text="@string/gi_payable_amount" -->
<!--             android:textColor="#000000" /> -->

        <TextView
            android:id="@+id/txv_status_oo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_status" />
    </LinearLayout>

</LinearLayout>