<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="10"
        android:background="#eeeeee"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="3dp" >
        
         <TextView
            android:id="@+id/txv_sr_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_srno"
            android:textColor="#000000" />
        

        <TextView
            android:id="@+id/txv_restaurant_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_rest_name"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_bookings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_sbooking"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txv_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_email" />

        <TextView
             android:id="@+id/txv_booking_charge"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_booking_charge" />
        
         <TextView
             android:id="@+id/txv_used_loyalty_points_raw"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_loyality_point" />

        <TextView
            android:id="@+id/txv_total"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_total" />

        <TextView
            android:id="@+id/txv_status"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/roundcorner_all_booking"
            android:gravity="center"
            android:text="@string/gi_status" />
    </LinearLayout>

</LinearLayout>